# rtools

./: Cargo.toml  README.md  example_config.json  mut_parameter_demo  mut_parameter_demo.rs  new_config.json  ownership_demo  ownership_demo.rs
benches/: benchmark.rs
examples/: advanced_usage.rs  basic_usage.rs  network_usage.rs
src/: config.rs  dirscan.rs  fileinfo.rs  filesearch.rs  httpclient.rs  lib.rs  loganalyzer.rs  main.rs  network.rs  textstats.rs
tests/: dirscan_tests.rs  fileinfo_tests.rs  textstats_tests.rs
